Começando a pagina inicial separando partes dela com cores para facil visualização e testando algumas funções para definir qual melhor passo a seguir

--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Um belo incio</h1>
+    <header style="background-color: aqua;">
+            <table>
+                <tr>
+                    <td>Teste 1</td>
+                    <td>Teste 2</td>
+                    <td>Teste 3</td>
+                </tr>
+            </table>
+    </header>
+    <div style="background-color: brown;">
+        <h1>Pagina inicial onde irei coloca informações basicas como nome, endereço, telefone e objetivo</h1>
+        Endereçon aleatorio usando google maps
+    </div>
+    <div style="background-color: chartreuse;">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d190737.61523646594!2d-46.814139630045304!3d-23.889035716511238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1723472495679!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div style="background-color: blueviolet;">
+        Parte final onde irei coloca icones
+    </div>    
 </body>
 </html>
